# dark-defi

./: .env.example  .eslintrc.cjs  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECTS.md  README.md  SECURITY.md  package.json  tsconfig.json
dark-protocol-program/: Anchor.toml  README.md  deploy-devnet.sh  deploy-mainnet.sh  package-lock.json
docs/: API_KEYS_SETUP.md  ARCHITECTURE.md  BIRDEYE_INTEGRATION.md  BUILD_STATUS.md  COMPLETE_IMPLEMENTATION_GUIDE.md  CROSS_CHAIN_BRIDGE_GUIDE.md  DARK_DEFI_VISION.md  DARK_PROTOCOL_GUIDE.md  DARK_SWAP_COMPLETE.md  DARK_SWAP_DEPLOYMENT_READY.md  DARK_SWAP_GUIDE.md  DARK_TERMINAL.md  DARK_X402_TERMINAL.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUCCESS.md  DEVNET_DEPLOYMENT.md  HELIUS_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  INTEROPERABILITY.md  OPEN_SOURCE_RELEASE.md  ORACLE_INTEGRATION_GUIDE.md  PROGRAM_INFO.md  PROJECT_ORGANIZATION.md  PROJECT_SUMMARY.md  QUICK_START.md  QUICK_START_DARK_SWAP.md  QUICK_STARTmain.md  README (3).md  REPOSITORY_SETUP.md  SDK_BUILD_SUCCESS.md  SDK_INTEGRATION_SUMMARY.md  SETUP_GUIDE.md  SHIELDED_WALLET_GUIDE.md  START_HERE.md  TESTING_GUIDE.md  THREAT_MODEL.md  VISUAL_GUIDE.md  XAI_INTEGRATION.md  X_ARTICLE.md  (+6 more)
programs/: Anchor.toml  Cargo.toml  (+1 more)
programs/clawd-stake/: Cargo.toml  README.md
programs/clawd-stake/src/: constants.rs  errors.rs  events.rs  lib.rs  state.rs
programs/clawd-stake/src/instructions/: claim_rewards.rs  deposit_gacha_fees.rs  initialize_pool.rs  mod.rs  shared.rs  stake.rs  unstake.rs  update_pool.rs
programs/mpl-corenft-staking/: Anchor.toml  Cargo.toml  README.md
programs/mpl-corenft-staking/src/: constant.rs  error.rs  lib.rs  state.rs
programs/mpl-corenft-staking/src/instructions/: initialize.rs  mod.rs  stake_agent.rs  unstake_agent.rs
programs/solana-ai-inference/: Cargo.toml
programs/solana-ai-inference/src/: lib.rs
(+60 files in other folders)
