[package]
name = "solana-ai-inference"
version = "0.1.0"
description = "Solana AI Inference Protocol - On-chain DNA generation, model registry, and inference requests"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_ai_inference"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
solana-program = "1.18.17"
